force-app/main/default/objects/Onboarding_Task__c/fields/Meeting_Link__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Link__c</fullName>
    <formula>HYPERLINK(Training_Program__r.Meeting_Link__c, &quot;Open Meeting&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Link</label>
    <type>Text</type>
</CustomField>