force-app/main/default/objects/Onboarding_Task__c/fields/Task_Category__c.field-meta.xml
<CustomField>
    <fullName>Task_Category__c</fullName>
    <label>Task Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>IT Setup</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>HR Orientation</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Department Specific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>