force-app/main/default/objects/Onboarding_Task__c/fields/Training_Program__c.field-meta.xml
<CustomField>
    <fullName>Training_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Program</label>
    <referenceTo>Training_Program__c</referenceTo>
    <relationshipLabel>Onboarding Tasks</relationshipLabel>
    <relationshipName>Onboarding_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>