force-app/main/default/objects/Onboarding_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>Employee__c</columns>
    <columns>Status__c</columns>
    <columns>Task_Category__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>